Add examples to vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: biostat.625.hw4
-Title: What the Package Does (One Line, Title Case)
+Package: reDist
+Title: Reimplementation of dist() Function From Base R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+    person("Andre", "Gala-Garza", , "asgala@umich.edu", role = c("aut", "cre"))
+Description: This package reimplements the base R function dist(). When given a data matrix as input, re_dist() calculates the distance between each pair of rows in the input matrix using the specified distance metric. The result is stored as a special single-dimensional vector object that resembles a lower triangular matrix.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
