--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ RoxygenNote: 7.3.3
 Suggests: 
     covr,
     knitr,
+	microbenchmark,
     rmarkdown,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
